# school-choice

./: .gitignore  .gitlab-ci.yml  CITATION.cff  Pipfile  README.jisk.md  README.md  batchrunner.py  conda_env.yml  datacrawler.py  explore.ipynb  profile.ipynb  pyproject.toml  requirements.txt  result.prof  result.pstats  result_numba.prof  run.py  scaling_graph.ipynb  setup.cfg  setup.py  test_dask.py  testrun.py
compass/: __init__.py  agents_base.py  agents_household.c  agents_household.py  agents_spatial.py  allocator.py  description.html  household.py  model.py  neighbourhood.py  parameters.py  requirements.txt  scheduler.py  school.py  student.py  utils.py  visualisation.py
cython_school_ranking/: cyranking.c  cyranking.html  cyranking.pyx  pyranking.py  ranking.py  run.ipynb  setup.py
docs/: compass.html  index.html  search.js
local-dependencies/: segregation-2.1.0-py3-none-any.whl
mesa-fixes/: README.md  space.py
notebooks-eric/: choice-analysis.ipynb  convergence-analysis.ipynb  custom_functions.py  distance-analyses.ipynb  household-analyses.ipynb  parameter-sweep.ipynb  prob-measure.ipynb  regression.ipynb  residential-school-segregation-amsterdam.ipynb  role-of-residential-in-schools.ipynb  role-of-residential.ipynb  sensitivity-analysis.ipynb  shap.ipynb
profile/: cython.prof  jisk_v2_new_allocator_amsterdam.prof  profile_result.prof  profile_result_no_distance.prof  profile_result_pypy.prof  pstats_result.stats  school_rankings.prof
tests/: test_agents_base.py  test_functional.py  test_household.py  test_measurements.py  test_model.py
(+27 files in other folders)
